--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,75 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{sqlsolver,
+abbr = {SIGMOD 2024},
+author = {Ding, Haoran and Wang, Zhaoguo and Yang, Yicun and Zhang, Dexin and Xu, Zhenglin and Chen, Haibo and Piskac, Ruzica and Li, Jinyang},
+title = {Proving Query Equivalence Using Linear Integer Arithmetic},
+year = {2024},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://dl.acm.org/doi/10.1145/3626768},
+booktitle = {2024 International Conference on Management of Data},
+location = {Santiago, Chile},
+series = {SIGMOD '24},
+pdf = {sqlsolver.pdf},
+month = jun,
+selected = {true},
+additional_info={. *Demo* can be found [here](https://sqlsolver.systems/sqlsolver/home). *Code* can be found [here](https://github.com/SJTU-IPADS/SQLSolver).},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{wetune,
+abbr = {SIGMOD 2022},
+author = {Wang, Zhaoguo and Zhou, Zhou and Yang, Yicun and Ding, Haoran and Hu, Gansen and Ding, Ding and Tang, Chuzhe and Chen, Haibo and Li, Jinyang},
+title = {WeTune: Automatic Discovery and Verification of Query Rewrite Rules},
+year = {2022},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3514221.3526125},
+booktitle = {2022 International Conference on Management of Data},
+pages = {94–107},
+numpages = {14},
+keywords = {SQL solver, query rewriting, rewrite rule discovery},
+location = {Philadelphia, PA, USA},
+series = {SIGMOD '22},
+pdf = {wetune.pdf},
+month = jun,
+selected = {true},
+additional_info={. *Demo* can be found [here](https://ipads.se.sjtu.edu.cn/werewriter-demo/home). *Code* can be found [here](https://github.com/WeTune/WeTune-code).},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{10.1145/3341301.3359644,
+abbr = {SOSP 2019},
+author = {Zou, Mo and Ding, Haoran and Du, Dong and Fu, Ming and Gu, Ronghui and Chen, Haibo},
+title = {Using concurrent relational logic with helpers for verifying the AtomFS file system},
+year = {2019},
+isbn = {9781450368735},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3341301.3359644},
+pdf = {atomfs.pdf},
+booktitle = {Proceedings of the 27th ACM Symposium on Operating Systems Principles},
+pages = {259–274},
+numpages = {16},
+location = {Huntsville, Ontario, Canada},
+series = {SOSP '19},
+selected = {true},
+month = oct
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{flux,
+abbr={OSDI 2023},
+author = {Haoran Ding and Zhaoguo Wang and Zhuohao Shen and Rong Chen and Haibo Chen},
+title = {Automated Verification of Idempotence for Stateful Serverless Applications},
+booktitle = {17th USENIX Symposium on Operating Systems Design and Implementation (OSDI 23)},
+year = {2023},
+isbn = {978-1-939133-34-2},
+location = {Boston, MA, USA},
+pages = {887--910},
+url = {https://www.usenix.org/conference/osdi23/presentation/ding},
+publisher = {USENIX Association},
+month = jul,
+selected = {true},
+pdf={flux.pdf}
 }
