fix paper and subtitle

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,13 +9,29 @@ year = {2024},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://dl.acm.org/doi/10.1145/3626768},
-booktitle = {2024 International Conference on Management of Data},
+booktitle = {2024 International Conference on Management of Data (SIGMOD '24)},
 location = {Santiago, Chile},
 series = {SIGMOD '24},
 pdf = {sqlsolver.pdf},
 month = jun,
 selected = {true},
 additional_info={. *Demo* can be found [here](https://sqlsolver.systems/sqlsolver/home). *Code* can be found [here](https://github.com/SJTU-IPADS/SQLSolver).},
+}
+
+@inproceedings{flux,
+abbr={OSDI 2023},
+author = {Haoran Ding and Zhaoguo Wang and Zhuohao Shen and Rong Chen and Haibo Chen},
+title = {Automated Verification of Idempotence for Stateful Serverless Applications},
+booktitle = {17th USENIX Symposium on Operating Systems Design and Implementation (OSDI '23)},
+year = {2023},
+isbn = {978-1-939133-34-2},
+location = {Boston, MA, USA},
+pages = {887--910},
+url = {https://www.usenix.org/conference/osdi23/presentation/ding},
+publisher = {USENIX Association},
+month = jul,
+selected = {true},
+pdf={flux.pdf}
 }
 
 @inproceedings{wetune,
@@ -26,7 +42,7 @@ year = {2022},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3514221.3526125},
-booktitle = {2022 International Conference on Management of Data},
+booktitle = {2022 International Conference on Management of Data (SIGMOD '22)},
 pages = {94–107},
 numpages = {14},
 keywords = {SQL solver, query rewriting, rewrite rule discovery},
@@ -48,28 +64,11 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3341301.3359644},
 pdf = {atomfs.pdf},
-booktitle = {Proceedings of the 27th ACM Symposium on Operating Systems Principles},
+booktitle = {Proceedings of the 27th ACM Symposium on Operating Systems Principles (SOSP '19)},
 pages = {259–274},
 numpages = {16},
 location = {Huntsville, Ontario, Canada},
 series = {SOSP '19},
 selected = {true},
 month = oct
-}
-
-
-@inproceedings{flux,
-abbr={OSDI 2023},
-author = {Haoran Ding and Zhaoguo Wang and Zhuohao Shen and Rong Chen and Haibo Chen},
-title = {Automated Verification of Idempotence for Stateful Serverless Applications},
-booktitle = {17th USENIX Symposium on Operating Systems Design and Implementation (OSDI 23)},
-year = {2023},
-isbn = {978-1-939133-34-2},
-location = {Boston, MA, USA},
-pages = {887--910},
-url = {https://www.usenix.org/conference/osdi23/presentation/ding},
-publisher = {USENIX Association},
-month = jul,
-selected = {true},
-pdf={flux.pdf}
 }
