--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,8 @@ series = {SIGMOD '24},
 pdf = {sqlsolver.pdf},
 month = jun,
 selected = {true},
-additional_info={. *Demo* can be found [here](https://sqlsolver.systems/sqlsolver/home). *Code* can be found [here](https://github.com/SJTU-IPADS/SQLSolver).},
+code = {https://github.com/SJTU-IPADS/SQLSolver},
+website = {https://sqlsolver.systems/sqlsolver/home}
 }
 
 @inproceedings{flux,
@@ -51,7 +52,8 @@ series = {SIGMOD '22},
 pdf = {wetune.pdf},
 month = jun,
 selected = {true},
-additional_info={. *Demo* can be found [here](https://ipads.se.sjtu.edu.cn/werewriter-demo/home). *Code* can be found [here](https://github.com/WeTune/WeTune-code).},
+code = {https://github.com/WeTune/WeTune-code},
+website = {https://ipads.se.sjtu.edu.cn/werewriter-demo/home}
 }
 
 @inproceedings{10.1145/3341301.3359644,
