--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,7 +59,7 @@ website = {https://ipads.se.sjtu.edu.cn/werewriter-demo/home}
 @inproceedings{10.1145/3341301.3359644,
 abbr = {SOSP 2019},
 author = {Zou, Mo and Ding, Haoran and Du, Dong and Fu, Ming and Gu, Ronghui and Chen, Haibo},
-title = {Using concurrent relational logic with helpers for verifying the AtomFS file system},
+title = {Using Concurrent Relational Logic with Helpers for Verifying the AtomFS File System},
 year = {2019},
 isbn = {9781450368735},
 publisher = {Association for Computing Machinery},
