--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@inproceedings{sqldriller,
+abbr = {SIGMOD 2025},
+author = {Yang, Yicun and Wang, Zhaoguo and Xia, Yu and Wei, Zhuoran and Ding, Haoran and Piskac, Ruzica and Chen, Haibo and Li, Jinyang},
+title = {Automated Validating and Fixing of Text-to-SQL Translation with Execution Consistency},
+year = {2025 (To appear)},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+booktitle = {2025 International Conference on Management of Data (SIGMOD '25)},
+location = {Berlin, Germany},
+series = {SIGMOD '25},
+month = jun,
+selected = {true}
+}
+
 @inproceedings{sqlsolver,
 abbr = {SIGMOD 2024},
 author = {Ding, Haoran and Wang, Zhaoguo and Yang, Yicun and Zhang, Dexin and Xu, Zhenglin and Chen, Haibo and Piskac, Ruzica and Li, Jinyang},
