--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 abbr = {SIGMOD 2025},
 author = {Yang, Yicun and Wang, Zhaoguo and Xia, Yu and Wei, Zhuoran and Ding, Haoran and Piskac, Ruzica and Chen, Haibo and Li, Jinyang},
 title = {Automated Validating and Fixing of Text-to-SQL Translation with Execution Consistency},
-year = {2025 (To appear)},
+year = {2025},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 booktitle = {2025 International Conference on Management of Data (SIGMOD '25)},
