--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,8 @@ booktitle = {2025 International Conference on Management of Data (SIGMOD '25)},
 location = {Berlin, Germany},
 series = {SIGMOD '25},
 month = jun,
-selected = {true}
+selected = {true},
+pdf={sqldriller.pdf}
 }
 
 @inproceedings{sqlsolver,
