--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@article{grewriter,
+abbr = {VLDB 2025},
+author = {Jiang, Zhe and Wang, Zhaoguo and Lan, Haoning and Tang, Chuzhe and Ding, Haoran and Wang, Lefeng and Zou, Songyun and Wei, Zhuoran and Liu, Yongcun and Yu, Xiang and Ren, Yang and Li, Guoliang and Chen, Haibo},
+title = {GRewriter: Practical Query Rewriting with Automatic Rule Set Expansion in GaussDB},
+year = {2025},
+issue_date = {August 2025},
+publisher = {VLDB Endowment},
+volume = {18},
+number = {12},
+issn = {2150-8097},
+url = {https://doi.org/10.14778/3750601.3750622},
+doi = {10.14778/3750601.3750622},
+journal = {Proc. VLDB Endow.},
+month = sep,
+pages = {4991–5003},
+numpages = {13},
+selected = {true},
+pdf={grewriter.pdf}
+}
+
 @inproceedings{sqldriller,
 abbr = {SIGMOD 2025},
 author = {Yang, Yicun and Wang, Zhaoguo and Xia, Yu and Wei, Zhuoran and Ding, Haoran and Piskac, Ruzica and Chen, Haibo and Li, Jinyang},
